--- a/themes/sevian/html/login.html
+++ b/themes/sevian/html/login.html
@@ -1,7 +1,7 @@
 <div class="main sevian">
     <div class="menu">--100--</div>
     <div class="panel-left">--1----6----9----2--</div>
-    <div class="panel-right">--4----8--</div>
+    <div class="panel-right">--4----5----8--</div>
 </div>
  
 
