--- a/js/form.html
+++ b/js/form.html
@@ -19,108 +19,10 @@
 </head>
 
 <body>
-<div id="menu3" class="sg-menu summer n-icon menu-nav">
-  <div class="caption">Menu Opciones</div>
-  <div class="menu">
-    <div class="item">
-      <button class="option" data-value="">
-      <input type="checkbox">
-      <span class="icon"></span><span class="text">uno</span>
-      </button>
-    </div>
-    <div class="item">
-      <button class="option" data-value="">
-      <input type="checkbox">
-      <span class="icon"></span><span class="text">dos</span>
-      </button>
-    </div>
-    <div class="item close">
-      <button class="option" data-value="">
-      <input type="checkbox">
-      <span class="icon fruit"></span><span class="text">tres</span><span class="ind" data-sg-menu-type="ind"></span>
-      </button>
-      <div class="menu submenu" style="position: fixed; -moz-user-select: none; visibility: hidden; z-index: 150000000;">
-        <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-          <input type="checkbox">
-          <span class="icon"></span><span class="text">tres:a</span></a></div>
-        <div class="item close"><a class="option" href="javascript:void(0)" data-value="">
-          <input type="checkbox">
-          <span class="icon"></span><span class="text">tres:b</span><span class="ind" data-sg-menu-type="ind"></span></a>
-          <div class="menu submenu" style="position: fixed; -moz-user-select: none; visibility: hidden; z-index: 150000000;">
-            <div class="item close"><a class="option" href="javascript:void(0)" data-value="">
-              <input type="checkbox">
-              <span class="icon"></span><span class="text">caracas</span><span class="ind" data-sg-menu-type="ind"></span></a>
-              <div class="menu submenu" style="position: fixed; -moz-user-select: none; visibility: hidden; z-index: 150000000;">
-                <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-                  <input type="checkbox">
-                  <span class="icon"></span><span class="text">alpha</span></a></div>
-                <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-                  <input type="checkbox">
-                  <span class="icon"></span><span class="text">betha</span></a></div>
-                <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-                  <input type="checkbox">
-                  <span class="icon"></span><span class="text">gamma</span></a></div>
-              </div>
-            </div>
-            <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-              <input type="checkbox">
-              <span class="icon"></span><span class="text">valencia</span></a></div>
-            <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-              <input type="checkbox">
-              <span class="icon"></span><span class="text">san carlos</span></a></div>
-            <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-              <input type="checkbox">
-              <span class="icon"></span><span class="text">yaritagua</span></a></div>
-          </div>
-        </div>
-        <div class="item close"><a class="option" href="javascript:void(0)" data-value="">
-          <input type="checkbox">
-          <span class="icon"></span><span class="text">tres:c</span><span class="ind" data-sg-menu-type="ind"></span></a>
-          <div class="menu submenu" style="position: fixed; -moz-user-select: none; visibility: hidden; z-index: 150000000;">
-            <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-              <input type="checkbox">
-              <span class="icon"></span><span class="text">caracas II</span></a></div>
-            <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-              <input type="checkbox">
-              <span class="icon"></span><span class="text">valencia II</span></a></div>
-            <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-              <input type="checkbox">
-              <span class="icon"></span><span class="text">san carlos II</span></a></div>
-            <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-              <input type="checkbox">
-              <span class="icon"></span><span class="text">yaritagua II</span></a></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="item">
-      <button class="option" data-value="">
-      <input type="checkbox">
-      <span class="icon"></span><span class="text">IV</span>
-      </button>
-    </div>
-    <div class="item close">
-      <button class="option" data-value="">
-      <input type="checkbox">
-      <span class="icon"></span><span class="text">V</span><span class="ind" data-sg-menu-type="ind"></span>
-      </button>
-      <div class="menu submenu" style="position: fixed; -moz-user-select: none; visibility: hidden; z-index: 150000000;">
-        <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-          <input type="checkbox">
-          <span class="icon"></span><span class="text">Perla</span></a></div>
-        <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-          <input type="checkbox">
-          <span class="icon"></span><span class="text">diamante</span></a></div>
-        <div class="item"><a class="option" href="javascript:void(0)" data-value="">
-          <input type="checkbox">
-          <span class="icon"></span><span class="text">esmeralda</span></a></div>
-      </div>
-    </div>
-  </div>
-</div>
-<hr>
+
+    <div id="menu4"></div>
    <div id="menu2">
-      
+      <hr>
 </div> 
   <form class="sg-form" name="a" onInput="alert(8)">
       <header class="head">Formulario</header>
