--- a/test/dos.html
+++ b/test/dos.html
@@ -25,7 +25,7 @@ div.a, div.b, div.c{
 	height: 200px;
 	width: 200px;
 	border: 2px solid orange;
-	
+
 }
 div.d{
 	position: absolute;
@@ -33,8 +33,8 @@ div.d{
 	top:50px;
 	height: 200px;
 	width: 200px;
-	border: 2px solid rgb(13, 241, 222);
-	background-color: rgba(22, 114, 235, 0.781);
+	border: 2px solid rgb(187, 130, 224);
+	background-color: rgba(114, 6, 100, 0.781);
 }
 div.e{
 	position: absolute;
@@ -55,13 +55,13 @@ div.f{
 	border: 2px solid rgb(13, 241, 222);
 	background-color: rgba(125, 235, 22, 0.781);
 	overflow: scroll;
-	
+
 }
 
 
 .x{
 	position: fixed;
-	
+
 	left:0px;
 	top:250px;
 	background-color: rgba(180, 4, 165, 0.822);
@@ -90,7 +90,9 @@ input{
 			<div class="c">
 				<div class="d">
 					<div class="e">
-						<div class="f"><div class="x"></div></div>
+						<div class="f">
+							<div class="x"></div>
+						</div>
 					</div>
 
 				</div>
