--- a/test/turf.html
+++ b/test/turf.html
@@ -11,8 +11,40 @@
     <script type="module">
 	</script>
     <script>
+      var line = turf.lineString([[-74, 40], [-78, 42], [-82, 35]]);
+      console.log(line)
 
+let b = [
+  [
+    -66.9757007783196,
+    10.387291248200839
+  ],
+  [
+    -66.97295419628824,
+    10.45617366629368
+  ],
+  [
+    -66.85347787792897,
+    10.460225098349653
+  ],
+  [
+    -66.8452381318353,
+    10.392018959306043
+  ],
+  [
+    -66.9757007783196,
+    10.387291248200839
+  ]
+];
+let a = [...b];
 
+if (a.length > 0) {
+  console.log(b)
+  console.log(a)
+  a.splice(a.length - 2, 1);
+  console.log(a)
+
+}
 
 
 
